# fri-rso-2025

./: .env.local.example  .envrc  .gitignore  BOOTSTRAP.md  README.md  ci.py
doc/: CI.md  ENVIRONMENT.md  (+4 more)
src/vehicle-controller/: Dockerfile  compose.yaml  docker-entrypoint.sh  latest_tag  pyproject.toml
src/vehicle-controller/chart/: Chart.yaml  values.yaml
src/vehicle-controller/chart/templates/: coordinator-deployment.yaml  coordinator-secret.yaml  worker-deployment.yaml  worker-secret.yaml
src/vehicle-controller/latest_uploaded_tag/: prod
src/vehicle-controller/src/vehicle_controller/: app.py  async_value.py  errors.py  health.py  nats.py  resilience.py  settings.py  shared.py
src/vehicle-controller/src/vehicle_controller/coordinator/: app.py  coordinator.py  default_app.py  responder.py  settings.py
src/vehicle-controller/src/vehicle_controller/worker/: app.py  default_app.py  heartbeat.py  listener.py  settings.py  vehicle.py  workers.py
src/vehicle-manager/: .dockerignore  .gitignore  Dockerfile  alembic.ini  compose.yaml  latest_tag  pgcli.sh  pyproject.toml  token.sh
src/vehicle-manager/chart/: Chart.yaml  values.yaml
src/vehicle-manager/chart/templates/: deployment.yaml  ingress.yaml  service.yaml
src/vehicle-manager/latest_uploaded_tag/: prod
src/vehicle-manager/migrations/: env.py
src/vehicle-manager/migrations/versions/: 0db3d88b0a50_.py  1ccc04d6c13a_.py  316cd1d9077d_start.py  6ef8d66872c6_full.py  97c5b50d3d91_start.py  b2432150cbcd_.py
src/vehicle-manager/src/vehicle_manager/: __init__.py  app.py  auth.py  controller_link.py  crud.py  default_app.py  errors.py  health.py  nats.py  resilience.py  settings.py
src/vehicle-manager/src/vehicle_manager/db/: core.py  models.py
src/vehicle-manager/src/vehicle_manager/routes/: crud.py
(+94 files in other folders)
