[project]
name = "vehicle-controller"
version = "0.1.0"
requires-python = "==3.14.*"
dependencies = [
    "fastapi-problem>=0.12.0",
    "fastapi[standard]>=0.128.0",
    "nats-py>=2.12.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["src/vehicle_controller/tests/"]
